# WikiParser

./: .dockerignore  .env.docker.template  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/articles/: models.py  repositories.py  schemas.py  services.py  views.py
app/core/: config.py  dependencies.py
app/core/db/: db_helper.py  mixins.py
app/core/exceptions/: articles.py  base.py
app/core/models/: base.py
app/core/utils/: case_converter.py  error_handlers.py  logger.py  repository.py  summary_abstract.py  unitofwork.py
app/migrations/: env.py
app/migrations/versions/: 23277cc6ebdd_article_and_articlesummary.py
app/parsers/: wiki_parser.py
